src/test/ui/parser/issues/issue-14303-struct.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-struct.rs:1:17
   |
LL | struct X<'a, T, 'b> {
   |         --------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, 'b, T>`

error: aborting due to previous error

